# intro-haskell

./: .gitignore  README.md  intro-haskell.cabal  package.yaml  stack.yaml
.github/workflows/: deploy.yaml
app/: Chapter.hs  Component.hs  HtmlGenerator.hs  Main.hs
app/Chapters/: Chapter1.hs  Chapter3.hs  Chapter5.hs  Chapter6.hs
src/: Chapter.hs  Chapter1.hs  Chapter2.hs  Chapter3.hs  Chapter4.hs  Chapter5.hs  Chapter6.hs  Chapters.hs  Component.hs  HtmlGenerator.hs  Page.hs
src/Chapters/: Chapter1.hs  Chapter2.hs  Chapter3.hs  Chapter4.hs  Chapter5.hs  Chapter6.hs  Chapter7.hs
