cabal-version: 1.12

name:           intro-haskell
version:        1.0.0.0
description:    Please see the README on GitHub at <https://github.com/t-sasaki915/intro-haskell#readme>
homepage:       https://github.com/t-sasaki915/intro-haskell#readme
bug-reports:    https://github.com/t-sasaki915/intro-haskell/issues
author:         TSasaki
maintainer:     netst915@gmail.com
copyright:      2024 TSasaki
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/t-sasaki915/intro-haskell

library
  exposed-modules:
      Chapter
      Chapters.Chapter1
      Chapters.Chapter2
      Chapters.Chapter3
      Chapters.Chapter4
      Chapters.Chapter5
      Chapters.Chapter6
      Chapters.Chapter7
      Component
      HtmlGenerator
  other-modules:
      Paths_intro_haskell
  hs-source-dirs:
      src
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
  build-depends:
      base >=4.7 && <5
    , bytestring ==0.11.5.3
    , directory ==1.3.8.4
    , filepath ==1.4.300.1
    , lucid ==2.11.20230408
    , text ==2.0.2
  default-language: Haskell2010
  default-extensions: OverloadedStrings, LambdaCase

executable intro-haskell-exe
  main-is: Main.hs
  other-modules:
      Paths_intro_haskell
  hs-source-dirs:
      app
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , intro-haskell
    , bytestring ==0.11.5.3
    , directory ==1.3.8.4
    , filepath ==1.4.300.1
    , lucid ==2.11.20230408
    , text ==2.0.2
  default-language: Haskell2010
  default-extensions: OverloadedStrings, LambdaCase
